--- a/store/src/main/webapp/WEB-INF/web.xml
+++ b/store/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,42 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   <session-config>
-     <tracking-mode>COOKIE</tracking-mode>
+    <session-timeout>30</session-timeout>
   </session-config>
+  <servlet>
+    <servlet-name>Kaptcha</servlet-name>
+    <servlet-class>com.google.code.kaptcha.servlet.KaptchaServlet</servlet-class>
+    <init-param>
+      <param-name>kaptcha.border</param-name>
+      <param-value>no</param-value>
+    </init-param>
+    <init-param>
+      <param-name>kaptcha.noise.impl</param-name>
+      <param-value>com.google.code.kaptcha.impl.NoNoise </param-value>
+    </init-param>
+    <init-param>
+      <param-name>kaptcha.textproducer.font.color</param-name>
+      <param-value>blue</param-value>
+    </init-param>
+    <init-param>
+      <param-name>kaptcha.textproducer.char.space</param-name>
+      <param-value>5</param-value>
+    </init-param>
+    <init-param>
+      <param-name>kaptcha.background.clear.from</param-name>
+      <param-value>white</param-value>
+    </init-param>
+    <init-param>
+      <param-name>kaptcha.background.clear.to</param-name>
+      <param-value>white</param-value>
+    </init-param>
+    <init-param>
+      <param-name>kaptcha.session.key</param-name>
+      <param-value>KAPTCHA_SESSION_KEY</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Kaptcha</servlet-name>
+    <url-pattern>/kaptcha.jpg</url-pattern>
+  </servlet-mapping>
 </web-app>
